objects/record_picklist_object__c.object
<CustomObject>
    <fields>
        <fullName>picklist_field2__c</fullName>
        <label>picklist_field2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>goa</fullName>
                </value>
                <value>
                    <fullName>italy</fullName>
                </value>
                <value>
                    <fullName>rome</fullName>
                </value>
                <value>
                    <fullName>switzerland</fullName>
                </value>
                <value>
                    <fullName>sikkim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>picklist_field3__c</fullName>
        <label>picklist_field3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>madras</fullName>
                </value>
                <value>
                    <fullName>chennai</fullName>
                </value>
                <value>
                    <fullName>gujarat</fullName>
                </value>
                <value>
                    <fullName>westbengal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>picklist_field__c</fullName>
        <label>picklist_field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Display values alphabetically, not in the order entered</fullName>
                </value>
                <value>
                    <fullName>Delhi</fullName>
                </value>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Chandigarh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>record_picklist_object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>record_picklist_object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>record_picklist_objects</pluralLabel>
    <recordTypes>
        <fullName>recordtype_pickist_recordtype</fullName>
        <active>true</active>
        <label>recordtype_pickist_recordtype</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>